--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-google-cloud-speech==2.16.0
+vosk
 pydub==0.25.1
 langdetect==1.0.9
-transformers==4.28.0
-torch
+spacy
+textblob
+pyAudioAnalysis
+fastapi
+uvicorn
+python-multipart
 numpy
-requests
-twilio
-resemblyzer
-python-dotenv
+pywhatkit
